// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  displayCharacterLeft: false
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 0;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--readonly mg-input--text mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <strong></strong>
        <slot name="append-input"></slot>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: 'blu'
}: 1`] = `
<mg-input-text value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong>
          blu
        </strong>
        <slot name="append-input"></slot>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  disabled: true,
  value: 'blu',
  helpText: 'My help text'
}: 1`] = `
<mg-input-text value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-help-text" class="mg-input__box" disabled="" id="identifier" maxlength="400" name="identifier" required="" type="text" value="blu">
            <mg-character-left characters="blu" identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  readonly: true,
  value: 'blu',
  helpText: 'My help text'
}: 1`] = `
<mg-input-text value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong>
          blu
        </strong>
        <slot name="append-input"></slot>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  value: 'blu',
  helpText: 'My help text'
}: 1`] = `
<mg-input-text value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-help-text" class="mg-input__box" id="identifier" maxlength="400" name="identifier" required="" type="text" value="blu">
            <mg-character-left characters="blu" identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon>
              <mock:shadow-root>
                <svg aria-hidden="true" class="mg-icon mg-icon--info-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                  <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0Zm-7.75 4V7h1.5v5h-1.5Zm0-8v1.5h1.5V4h-1.5Z" fill="currentColor" fill-rule="evenodd"></path>
                </svg>
              </mock:shadow-root>
            </mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--text mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
        <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
          <mg-icon>
            <mock:shadow-root>
              <svg aria-hidden="true" class="mg-icon mg-icon--info-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                <path clip-rule="evenodd" d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0Zm-7.75 4V7h1.5v5h-1.5Zm0-8v1.5h1.5V4h-1.5Z" fill="currentColor" fill-rule="evenodd"></path>
              </svg>
            </mock:shadow-root>
          </mg-icon>
        </mg-tooltip>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  type: 'search',
  icon: 'magnifying-glass'
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-icon mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <mg-icon>
              <mock:shadow-root>
                <svg aria-hidden="true" class="mg-icon mg-icon--magnifying-glass mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                  <path clip-rule="evenodd" d="M2 7a5 5 0 1 1 8.871 3.164L14 13.292l-.707.707-3.128-3.128A5 5 0 0 1 2 7Zm5 4a4 4 0 1 1 0-8 4 4 0 0 1 0 8Z" fill="currentColor" fill-rule="evenodd"></path>
                </svg>
              </mock:shadow-root>
            </mg-icon>
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="search">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', datalistoptions: [Array] }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" autocomplete="off" class="mg-input__box" id="identifier" list="identifier-datalist" maxlength="400" name="identifier" type="text">
            <datalist id="identifier-datalist">
              <option value="batman"></option>
              <option value="robin"></option>
              <option value="joker"></option>
            </datalist>
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', labelHide: true }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title class="sr-only" identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--text mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
        <slot name="append-input"></slot>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', type: 'search' }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="search">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with slot. 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--is-input-group-append mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="search">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <mg-button aria-label="search" role="button" slot="append-input" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    <mg-icon>
      <mock:shadow-root>
        <svg aria-hidden="true" class="mg-icon mg-icon--magnifying-glass mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
          <path clip-rule="evenodd" d="M2 7a5 5 0 1 1 8.871 3.164L14 13.292l-.707.707-3.128-3.128A5 5 0 0 1 2 7Zm5 4a4 4 0 1 1 0-8 4 4 0 0 1 0 8Z" fill="currentColor" fill-rule="evenodd"></path>
        </svg>
      </mock:shadow-root>
    </mg-icon>
    Search
  </mg-button>
</mg-input-text>
`;

exports[`mg-input-text Should render with slot. 2`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--is-append-input-slot-content mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="search">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <span slot="append-input">
    test
  </span>
</mg-input-text>
`;

exports[`mg-input-text Should render with slot. 3`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-buttons-group-append mg-input--is-input-group-append mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="search">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <mg-button aria-label="cancel" is-icon="" role="button" slot="append-input" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--icon mg-button--primary" id="identifier-cancel">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    <mg-icon>
      <mock:shadow-root>
        <svg aria-hidden="true" class="mg-icon mg-icon--cross mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
          <path d="M14.26 12.74 9.52 8l4.7-4.7a.29.29 0 0 0 0-.41l-1.1-1.1a.29.29 0 0 0-.41 0L8 6.48 3.26 1.74a.24.24 0 0 0-.34 0L1.74 2.91a.24.24 0 0 0 0 .34L6.48 8l-4.7 4.7a.29.29 0 0 0 0 .41l1.1 1.1a.29.29 0 0 0 .41 0L8 9.52l4.74 4.74a.24.24 0 0 0 .34 0l1.17-1.17a.24.24 0 0 0 0-.34Z" fill="currentColor"></path>
        </svg>
      </mock:shadow-root>
    </mg-icon>
  </mg-button>
  <mg-button aria-label="validate" is-icon="" role="button" slot="append-input" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--icon mg-button--primary" id="identifier-validate">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    <mg-icon>
      <mock:shadow-root>
        <svg aria-hidden="true" class="mg-icon mg-icon--check mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
          <path d="m15.27 4.23-1.11-1.18c-.11-.1-.27-.1-.38 0L6 10.36l-3.76-4a.187.187 0 0 0-.26 0L.71 7.6c-.07.07-.07.19 0 .26l5.12 5.41c.07.07.18.07.25 0l1.3-1.23 7.87-7.45c.1-.1.11-.26.01-.37h.01Z" fill="currentColor"></path>
        </svg>
      </mock:shadow-root>
    </mg-icon>
  </mg-button>
</mg-input-text>
`;

exports[`mg-input-text Should trigger events 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="is-focused mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-help-text" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should update mg-width 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-2">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should update mg-width 2`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-4">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should update mg-width 3`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-16">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text display error message with locale: fr 1`] = `
<mg-input-text lang="fr">
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="400" name="identifier" required="" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text display error message with locale: xx 1`] = `
<mg-input-text lang="xx">
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="400" name="identifier" required="" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text display error with displayError component's public method 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" required="" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text display error with displayError component's public method 2`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="400" name="identifier" required="" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is disabled validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is disabled validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 2`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" disabled="" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is readonly validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is readonly validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 2`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
        <slot name="append-input"></slot>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;
